--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 KAFKA_SUBSCRIBED_TOPICS=data-temperature,data-power,data-voltage
+
+HOST=localhost
+POSTGRES_DB=data
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
+PORT=5331
