--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,11 @@ spring.config.import=optional:file:.env[.properties]
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 server.port=8082
 
+spring.datasource.url=jdbc:postgresql://${HOST}:${PORT}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:liquibase/db.changelog.yaml
+spring.liquibase.enabled=true
+
 topics=${KAFKA_SUBSCRIBED_TOPICS}
