add sql to create data table

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 KAFKA_SUBSCRIBED_TOPICS=data-temperature,data-power,data-voltage
 
 HOST=localhost
-POSTGRES_DB=data
+POSTGRES_DB=sensor_data
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=postgres
 PORT=5331
