--- a/.github/workflows/docker-upload.yaml
+++ b/.github/workflows/docker-upload.yaml
@@ -17,7 +17,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        name: Build and Push to Docker Hub
+      - name: Build and Push to Docker Hub
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/data-analyzer-microservice
           tags: 0.0.$GITHUB_RUN_NUMBER
