--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -78,3 +78,15 @@ services:
       - '5331:5432'
     volumes:
       - db-data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7.2-rc-alpine
+    networks:
+      - app
+    env_file:
+      - .env
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - redis-data:/data
